# advent-of-code

./: .gitignore  README.md
2019/rust/07/: Cargo.toml  main.rs
2020/rust/day-01/: Cargo.toml  input.txt
2020/rust/day-01/benches/: benchmark.rs
2020/rust/day-01/src/: lib.rs  main.rs  part1.rs
2020/rust/day-02/: Cargo.toml  input.txt
2020/rust/day-02/benches/: benchmark.rs
2020/rust/day-02/src/: lib.rs  part1.rs  part2.rs
2020/rust/day-04/: Cargo.toml  input.txt
2020/rust/day-04/benches/: benchmark.rs
2020/rust/day-04/src/: lib.rs  part1.rs  part2.rs
2020/rust/day-07/: Cargo.toml  input.txt
2020/rust/day-07/benches/: benchmark.rs
2020/rust/day-07/src/: lib.rs  part1.rs  part2.rs
2020/rust/day-19/: Cargo.toml
2020/rust/day-19/src/: lib.rs
2020/rust/santa-replace-18/: Cargo.toml
2020/rust/santa-replace-18/src/: lib.rs
2021/rust/day-03/: Cargo.toml  README.md  dhat-heap.json  input.txt
2021/rust/day-03/src/: lib.rs
2021/rust/day-07/: Cargo.toml  README.md  input.txt
2021/rust/day-07/benches/: my_benchmark.rs
2021/rust/day-07/src/: lib.rs
2021/rust/day-09/: Cargo.toml  README.md  dot.txt  input.txt
2021/rust/day-09/src/: lib.rs  test-input.txt
2021/rust/day-16/: Cargo.toml  README.md  input.txt
2021/rust/day-16/benches/: my_benchmark.rs
2021/rust/day-16/src/: lib.rs  test-input.txt
2022/rust/day-25/: Cargo.toml  input.txt  test.txt
2022/rust/day-25/src/: lib.rs
2023/rust/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  benchmarks.txt  divan-details.md  justfile
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/benches/: benchmarks-criterion.rs
2023/rust/daily-template/src/: lib.rs  part2.rs
2023/rust/day-01/: Cargo.toml  input1.txt
2023/rust/day-01/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-01/src/: lib.rs  part1.rs  part2.rs  part2_aho_corasick.rs  part2_nom.rs  part2_subject.rs
2023/rust/day-02/: Cargo.toml  input2.txt
2023/rust/day-02-parsing/: Cargo.toml  README.md  small-input.txt  test-output.csv  test-output.txt
2023/rust/day-02-parsing/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-02-parsing/src/: game.rs  games.pest  lib.rs  nom_intro.rs  nom_intro_bytes.rs  nom_supreme_intro.rs  pest_intro.rs  regex_intro.rs  winnow_intro.rs  winnow_intro_bytes.rs
2023/rust/day-02/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-02/src/: custom_error.rs  lib.rs  part1.rs  part2.rs  part2_nom_iterator.rs
2023/rust/day-03/: Cargo.toml  input1.txt  input2.txt
2023/rust/day-03/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-03/src/: lib.rs  part1.rs  part1_nom.rs  part2.rs  part2_nom.rs
2023/rust/day-04/: Cargo.toml  input1.txt  input2.txt
2023/rust/day-04/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-04/src/: lib.rs  part1.rs  part1_nom_supreme.rs  part2.rs  part2_in_parser.rs
2023/rust/day-05/: Cargo.toml  input2.txt
2023/rust/day-05/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-05/src/: part1.rs  part2.rs
2023/rust/day-06/: Cargo.toml  input2.txt
2023/rust/day-06/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-06/src/: lib.rs  part1.rs  part1_math.rs  part2.rs  part2_math.rs
2023/rust/day-07/: Cargo.toml  input1.txt
2023/rust/day-07/benches/: benchmarks-criterion.rs  benchmarks.rs
2023/rust/day-07/src/: custom_error.rs  lib.rs  (+3 more)
2023/rust/day-08/: Cargo.toml  input2.txt
2023/rust/day-09/: Cargo.toml  input1.txt
2023/rust/day-10/: Cargo.toml  input1.txt
2023/rust/day-11/: Cargo.toml  input2.txt
2023/rust/day-12/: Cargo.toml  input2.txt
2023/rust/day-13/: Cargo.toml  input1.txt
2023/rust/day-14/: Cargo.toml  input1.txt  input2.txt
2023/rust/day-15/: Cargo.toml  input1.txt  input2.txt
2023/rust/day-16/: Cargo.toml  input1.txt
2023/rust/day-17/: Cargo.toml  input2.txt
2023/rust/day-18/: Cargo.toml  grid.txt  grid_filled_bug.txt  input2.txt
2023/rust/day-19/: Cargo.toml  input2.txt
2023/rust/day-20/: Cargo.toml  input1.txt
2023/rust/day-21/: Cargo.toml  equation-research.md  input1.txt  input2.txt
2023/rust/day-22/: Cargo.toml  input1.txt
2023/rust/day-23/: Cargo.toml  graph.dot  input1.txt
2023/rust/day-24/: Cargo.toml  input2.txt  research.md
2023/rust/day-25/: Cargo.toml  graph.dot  input2.txt
2023/rust/scripts/: get-aoc-input.rs
2023/rust/www/: Cargo.toml  README.md  tailwind.config.js
2024/rust/: Cargo.toml  benchmarks.txt  justfile  rustfmt.toml
2024/rust/daily-template/: Cargo.toml
2024/rust/day-01/: Cargo.toml
2024/rust/day-02/: Cargo.toml
2024/rust/day-03/: Cargo.toml
2024/rust/day-04/: Cargo.toml
2024/rust/day-05/: Cargo.toml
2024/rust/day-06/: Cargo.toml
2024/rust/day-06-viz/: Cargo.toml
2024/rust/day-07/: Cargo.toml
2024/rust/day-08/: Cargo.toml
2024/rust/day-09/: Cargo.toml
2024/rust/day-10/: Cargo.toml
2024/rust/day-11/: Cargo.toml
2024/rust/day-12/: Cargo.toml
2024/rust/day-13/: Cargo.toml
2024/rust/day-14/: Cargo.toml  output.txt
2024/rust/day-15/: Cargo.toml
2024/rust/day-16/: Cargo.toml
2024/rust/day-17/: Cargo.toml
2024/rust/day-18/: Cargo.toml
2024/rust/day-19/: Cargo.toml
2024/rust/day-20/: Cargo.toml
2024/rust/day-22/: Cargo.toml
2024/rust/day-23/: Cargo.toml
2024/rust/day-24/: Cargo.toml  graph-2.dot  graph-3.dot  graph-4-wpd-z11.dot  graph-5-skh-jqf.dot  graph-6-mdd-z19.dot  graph.dot  worklog-and-scratch-notes.md
2024/rust/day-25/: Cargo.toml
2024/rust/scripts/: get-aoc-input.rs
2025/rust/: Cargo.toml  benchmarks.txt  justfile
2025/rust/daily-template/: Cargo.toml  cargo-generate.toml
2025/rust/day-01/: Cargo.toml
2025/rust/day-02/: Cargo.toml
2025/rust/day-03/: Cargo.toml
2025/rust/day-04/: Cargo.toml
2025/rust/day-05/: Cargo.toml
2025/rust/day-06/: Cargo.toml
2025/rust/day-07/: Cargo.toml
2025/rust/day-08/: Cargo.toml
2025/rust/day-09/: Cargo.toml
2025/rust/day-09-viz/: Cargo.toml
2025/rust/day-10/: Cargo.toml
2025/rust/day-11/: Cargo.toml
2025/rust/day-12/: Cargo.toml
2025/rust/scripts/: get-aoc-input.rs
(+653 files in other folders)
