[workspace]
members = [
    "day-*",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-09-viz",
    "day-10",
    "day-11",
]
default-members = ["day-*"]
resolver = "3"

[workspace.dependencies]
bitvec = "1.0.1"
divan = "0.1.7"
glam = "0.30"
itertools = "0.14.0"
memoize = "0.5"
ndarray = "0.17.1"
nom = "8.0.0"
nom_locate = "5.0"
petgraph = "0.8"
rayon = "1.10.0"
rstest = "0.26"
rustc-hash = "2.1.1"
thiserror = "2.0.17"
tracing = "0.1.41"
pathfinding = "4.14"

[workspace.dependencies.miette]
version = "7.4"
features = ["fancy"]

[workspace.dependencies.test-log]
version = "0.2.13"
features = ["trace"]
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt", "env-filter"]
