[package]
name = "aoc-07"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"

[[bin]]
name = "aoc-07"
path = "main.rs"
