[package]
name = "day_02"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
criterion = "0.3.3"
regex = "1.4.2"
lazy_static = "1.4.0"

[[bin]]
name = "2020day2part1"
path = "./src/part1.rs"

[[bin]]
name = "2020day2part2"
path = "./src/part2.rs"


[[bench]]
name = "benchmark"
harness = false
