[package]
name = "santa18"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "santa18"
proc-macro = true
src = "src/lib.rs"
