[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitvec = "0.22.3"
dhat = { version = "0.2.4", optional = true }
itertools = "0.10.1"
ndarray = "0.15.4"
nom = "7.1.0"

[profile.release]
debug = 1
