[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dhat = { version = "0.2.4", optional = true }
ndarray = "0.15.4"
nom = "7.1.0"
once_cell = "1.8.0"
petgraph = "0.6.0"

[profile.dhat]
inherits = "release"
debug = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
