[package]
name = "day-02-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
rstest.workspace = true
nom-supreme.workspace = true
winnow = "0.5"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"

[dev-dependencies]
divan.workspace = true
criterion.workspace = true

[[bench]]
name = "day-02-parsing-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-02-parsing-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
