[package]
name = "day-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
nom-supreme.workspace = true
glam.workspace = true
bevy = "0.12"
rand = "0.8.5"
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_xpbd_3d = { version = "0.3", features = ["simd"] }
bevy_tweening = "0.9"

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-22-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-22-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
