[package]
name = "day-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
petgraph = "0.6.5"
graph-cycles = "0.1.0"
pathfinding = "4.12.0"

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-23-bench"
path = "benches/benchmarks.rs"
harness = false
